--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "less": "^4.1.3",
-    "node-scss": "^7.0.3"
+    "node-scss": "^7.0.3",
+    "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0"
   }
 }
