--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
     "less": "^4.1.3",
     "node-scss": "^7.0.3",
     "postcss-cli": "^10.1.0",
