--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "less": "^4.1.3",
     "node-scss": "^7.0.3",
     "postcss-cli": "^10.1.0",
+    "postcss-cssnext": "^3.1.1",
     "postcss-import": "^15.1.0"
   }
 }
