--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-scss": "^7.0.3",
     "postcss-cli": "^10.1.0",
     "postcss-cssnext": "^3.1.1",
-    "postcss-import": "^15.1.0"
+    "postcss-import": "^15.1.0",
+    "precss": "^4.0.0"
   }
 }
