--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
+    "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.1",
     "less": "^4.1.3",
     "node-scss": "^7.0.3",
     "postcss-cli": "^10.1.0",
