--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postcss-cli": "^10.1.0",
     "postcss-cssnext": "^3.1.1",
     "postcss-import": "^15.1.0",
-    "precss": "^4.0.0"
+    "precss": "^4.0.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
