--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
@@ -10,6 +11,7 @@
     "postcss-cssnext": "^3.1.1",
     "postcss-import": "^15.1.0",
     "precss": "^4.0.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
