--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "less": "^4.1.3",
+    "mini-css-extract-plugin": "^2.7.2",
     "node-scss": "^7.0.3",
     "postcss-cli": "^10.1.0",
     "postcss-cssnext": "^3.1.1",
